fixed: IDF z-index issue

--- a/src/app/page/discussions/group-feed/group-feed.component.css
+++ b/src/app/page/discussions/group-feed/group-feed.component.css
@@ -66,7 +66,7 @@
 
 .float_btn {
     position: absolute;
-    z-index: 100;
+    z-index: 50;
     right: 40px;
     bottom: 20px;
     transition: all 250ms ease;
